--- a/front-end/package.json
+++ b/front-end/package.json
@@ -12,6 +12,7 @@
     "load-grunt-tasks": "^3.3.0"
   },
   "devDependencies": {
+    "grunt-bower-concat": "^0.6.0",
     "grunt-contrib-concat": "^0.5.1",
     "grunt-contrib-jshint": "^0.11.3",
     "grunt-contrib-uglify": "^0.11.0",
