--- a/api/package.json
+++ b/api/package.json
@@ -19,6 +19,7 @@
     "method-override": "^1.0.2",
     "mongoose": "4.1.1",
     "morgan": "~1.0.0",
+    "multer": "^1.1.0",
     "passport": "^0.2.0",
     "passport-local": "~0.1.6"
   }
